[gd_scene load_steps=32 format=3 uid="uid://coep8t015d18x"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_1m4vs"]
[ext_resource type="AudioStream" uid="uid://5myv4g5gjq82" path="res://Sounds/Footsteps/Concrete/HardStep3.wav" id="2_kajnp"]
[ext_resource type="Script" path="res://FlashlightScript.gd" id="2_tnyjl"]
[ext_resource type="AudioStream" uid="uid://c4ulpfq5ju67t" path="res://Sounds/Leaking for Blood/Hitting flashlight 1.wav" id="3_r5txy"]
[ext_resource type="AudioStream" uid="uid://b83288litj106" path="res://Sounds/Footsteps/Concrete/HardStep4.wav" id="3_xvevl"]
[ext_resource type="AudioStream" uid="uid://brwcw1swc44ij" path="res://Sounds/Footsteps/Concrete/HardStep5.wav" id="4_3ap4e"]
[ext_resource type="AudioStream" uid="uid://cldeu2huqk3tt" path="res://Sounds/Leaking for Blood/Hitting flashlight 2.wav" id="4_d5qhm"]
[ext_resource type="AudioStream" uid="uid://djrjdpesk8a7x" path="res://Sounds/Footsteps/Concrete/HardStep6.wav" id="5_82ymy"]
[ext_resource type="AudioStream" uid="uid://fid33yvgoyxg" path="res://Sounds/Cloth Sounds/493291__joao_janz__clothes-shaking-movement-1_9.wav" id="6_6c8ah"]
[ext_resource type="AudioStream" uid="uid://da5ojs50aluka" path="res://Sounds/Cloth Sounds/493426__joao_janz__clothes-shaking-movement-4_11.wav" id="11_750bn"]
[ext_resource type="AudioStream" uid="uid://l0jkxmp6028v" path="res://Sounds/Cloth Sounds/493428__joao_janz__clothes-shaking-movement-4_1.wav" id="12_8ns7d"]
[ext_resource type="AudioStream" uid="uid://bheknvavjjs35" path="res://Sounds/Cloth Sounds/SitDown2 (1).wav" id="15_okbic"]
[ext_resource type="AudioStream" uid="uid://dowrhx8cvkwuv" path="res://Sounds/Cloth Sounds/493296__joao_janz__clothes-shaking-movement-1_4.wav" id="15_xb566"]
[ext_resource type="AudioStream" uid="uid://dcgoxitlvl5p0" path="res://Sounds/Cloth Sounds/493329__joao_janz__clothes-shaking-movement-1_1.wav" id="17_2tfrr"]
[ext_resource type="AudioStream" uid="uid://cng425lmanigy" path="res://Sounds/Cloth Sounds/SitDown2 (3).wav" id="17_deadi"]
[ext_resource type="AudioStream" uid="uid://dqi8id3427nl6" path="res://Sounds/Cloth Sounds/493341__joao_janz__clothes-shaking-movement-3_4.wav" id="18_qteij"]
[ext_resource type="Script" path="res://Credits.gd" id="18_tcksn"]
[ext_resource type="Texture2D" uid="uid://i2hodl2kd75v" path="res://Icons/HUD/Crosshair.png" id="19_fllmj"]
[ext_resource type="AudioStream" uid="uid://bntqv344nngec" path="res://Sounds/Cloth Sounds/493358__joao_janz__clothes-shaking-movement-3_6.wav" id="19_vam4u"]
[ext_resource type="AudioStream" uid="uid://bafk3pjikdhdq" path="res://Sounds/Cloth Sounds/493360__joao_janz__clothes-shaking-movement-2_8.wav" id="20_gxyi1"]
[ext_resource type="Texture2D" uid="uid://dsebvbmilculn" path="res://Icons/HUD/UseIndicator.png" id="20_uamkk"]
[ext_resource type="AudioStream" uid="uid://dyyms452pvkd1" path="res://Sounds/Cloth Sounds/493385__joao_janz__clothes-shaking-movement-2_9.wav" id="22_06f1f"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_wydro"]

[sub_resource type="Gradient" id="Gradient_fj00w"]
offsets = PackedFloat32Array(0.10274, 0.157534, 0.30137, 0.356164, 0.493151, 0.520548, 0.712329, 0.753425, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0.77451, 0.77451, 0.77451, 1, 0.527326, 0.527326, 0.527326, 1, 0.434687, 0.434687, 0.434687, 1, 0.285652, 0.285652, 0.285652, 1, 0.190434, 0.190434, 0.190434, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_elbh4"]
gradient = SubResource("Gradient_fj00w")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_0ydot"]
streams_count = 2
random_pitch = 1.2
random_volume_offset_db = 1.86
stream_0/stream = ExtResource("3_r5txy")
stream_0/weight = 1.0
stream_1/stream = ExtResource("4_d5qhm")
stream_1/weight = 1.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_xmyd7"]
blend_mode = 2

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_5ep4l"]
streams_count = 4
random_pitch = 1.0
stream_0/stream = ExtResource("2_kajnp")
stream_0/weight = 1.0
stream_1/stream = ExtResource("3_xvevl")
stream_1/weight = 1.0
stream_2/stream = ExtResource("4_3ap4e")
stream_2/weight = 1.0
stream_3/stream = ExtResource("5_82ymy")
stream_3/weight = 1.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_fpqa3"]
height = 1.15

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_sepj4"]
streams_count = 8
random_pitch = 1.0
stream_0/stream = ExtResource("6_6c8ah")
stream_0/weight = 1.0
stream_1/stream = ExtResource("12_8ns7d")
stream_1/weight = 1.0
stream_2/stream = ExtResource("11_750bn")
stream_2/weight = 1.0
stream_3/stream = ExtResource("15_xb566")
stream_3/weight = 1.0
stream_4/stream = ExtResource("17_2tfrr")
stream_4/weight = 1.0
stream_5/stream = ExtResource("18_qteij")
stream_5/weight = 1.0
stream_6/stream = ExtResource("19_vam4u")
stream_6/weight = 1.0
stream_7/stream = ExtResource("20_gxyi1")
stream_7/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_d05d1"]
streams_count = 3
playback_mode = 1
stream_0/stream = ExtResource("15_okbic")
stream_0/weight = 1.0
stream_1/stream = ExtResource("17_deadi")
stream_1/weight = 1.0
stream_2/stream = ExtResource("22_06f1f")
stream_2/weight = 1.0

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_1m4vs")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_wydro")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.67939, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
far = 120000.0

[node name="RayCast3D" type="RayCast3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, -1.11464e-07, -1, 0, 2.55, -4.37114e-08, 0, 0, 0)

[node name="SpotLight3D" type="SpotLight3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, -3.55271e-15, 0, 3.55271e-15, 1, 0, 0.318744, 0)
light_projector = SubResource("GradientTexture2D_elbh4")
shadow_enabled = true
distance_fade_enabled = true
spot_range = 16.8048
spot_angle = 40.0327
script = ExtResource("2_tnyjl")

[node name="Timer" type="Timer" parent="Head/Camera3D/SpotLight3D"]
process_callback = 0
one_shot = true

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="Head/Camera3D/SpotLight3D"]
transform = Transform3D(1, 0, 0, 0, 1, 3.55271e-15, 0, -3.55271e-15, 1, 0, -1.99813, 7.09879e-15)
stream = SubResource("AudioStreamRandomizer_0ydot")
volume_db = -15.0
bus = &"New Bus"

[node name="Timer2" type="Timer" parent="Head/Camera3D/SpotLight3D"]
one_shot = true

[node name="RayCast3D2" type="RayCast3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, -1.831, 1.50996e-07, 0, -2.76473e-07, -1, 0, 0, 0)
enabled = false
target_position = Vector3(0, -0.345, 0)

[node name="Panel" type="Panel" parent="."]
modulate = Color(0, 0, 0, 1)
material = SubResource("CanvasItemMaterial_xmyd7")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
mouse_force_pass_scroll_events = false

[node name="FootstepStreamer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_5ep4l")
volume_db = -2.786
bus = &"New Bus"

[node name="CroutchCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.575, 0)
shape = SubResource("CapsuleShape3D_fpqa3")
disabled = true

[node name="ClothStreamer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_sepj4")
volume_db = -10.0
pitch_scale = 1.57

[node name="Effects" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_d05d1")

[node name="Credits" type="RichTextLabel" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = -194.0
offset_right = 242.0
offset_bottom = -16.0
grow_vertical = 0
text = "
W/A/S/D - Move
Ctrl - Crouch
Shift - Run
E - Interact"
fit_content = true
scroll_active = false
script = ExtResource("18_tcksn")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -9.0
offset_top = -9.0
offset_right = 9.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(9, 0)
texture = ExtResource("19_fllmj")

[node name="InteractIcon" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.9999
offset_top = -35.0
offset_right = 51.0001
offset_bottom = 42.0001
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.36, 1.36)
texture = ExtResource("20_uamkk")
expand_mode = 1
stretch_mode = 2

[connection signal="timeout" from="Head/Camera3D/SpotLight3D/Timer" to="Head/Camera3D/SpotLight3D" method="_on_timer_timeout"]
[connection signal="timeout" from="Head/Camera3D/SpotLight3D/Timer2" to="Head/Camera3D/SpotLight3D" method="_on_timer_2_timeout"]
[connection signal="finished" from="FootstepStreamer" to="." method="_on_audio_stream_player_finished"]
